--- a/collage.css
+++ b/collage.css
@@ -459,13 +459,14 @@ nav bar and first section complete
   display: flex;
   background-image: linear-gradient(90deg, #0C2695 40%,#fff 1%, #fff 59%);
   flex-direction: row;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   gap:100px;
   justify-items: center;
   text-align: center;
 
   margin: auto;
+  max-height:1000px;
 }
 
 .about .player{
@@ -513,10 +514,12 @@ nav bar and first section complete
   cursor: pointer;
 }
 
-@media only screen and (max-width: 1478px) {
+@media only screen and (max-width: 1200px) {
   .about{
     background-image: linear-gradient(#0C2695 40%,#fff 1%, #fff 59%);
+    flex-direction: column;
     justify-content: space-around;
+    align-items: center;
   }
 }
 
@@ -524,11 +527,16 @@ nav bar and first section complete
   .about .player{
     width: 300px;
     height: 200px;
-    margin-top: 0px;
+    margin-top: 10%;
   }
   .about{
-    background-image: linear-gradient(#0C2695 35%,#fff 1%, #fff 59%);
+    background-image: linear-gradient(#0C2695 35%,#fff 1%, #fff 64%);
     gap:100px;
+    padding:5%;
+    margin-bottom: 30%;
+  }
+  .about .content{
+    max-width: 95%;
   }
 }
 
