--- a/IT.css
+++ b/IT.css
@@ -113,9 +113,8 @@ body{
     color: #FFF;
   }
   .header_items a:hover{
-    border-radius: 5px;
-    background: white;
-    color: #0C2695;
+    font-weight: 600;
+    transform: scale(1.1);
     transition: .25s;
   }
   .header .head{
@@ -153,10 +152,12 @@ body{
       font-weight: 500;
   }
   .header nav a:hover{
-    background: #3654D2;
-    color: white;
-    border-radius: 5px;
+    transform: scale(1.1);
+    font-weight: 600;
     transition: .35s;
+  }
+  .header nav a img:hover{
+    transform: none;
   }
   /* ------------------------ */
   
@@ -402,10 +403,12 @@ line-height: 24px; /* 150% */
     flex-shrink: 0;
     z-index: 2;
     padding: 50px 10px;
+
 } 
 .about_image img{
     width: 540px;
     height: 300px;
+    border-radius: 1rem;
 }
 
 @media only screen and (max-width : 1350px){
@@ -734,14 +737,28 @@ line-height: 1.5rem;
 }
 
 .view_more{
-    padding-top: 1.2rem;
+    margin-bottom: 0px;
     display: flex;
     text-decoration: none;
+    height:2rem;
+    background-color: #4C6BF1;
+    justify-content: center;
+    margin-left: -11px;
+    margin-right: -11px;
+    margin-bottom: -25px;
+   border-bottom-left-radius: 1rem;
+   border-bottom-right-radius: 1rem;
 }
 .view_more a{
-    margin-top: none;
+    margin-top: 0.2rem;
     font-size: 1rem;
     text-decoration: none;
+    color: #FFF;
+    text-align: center;
+    text-decoration: none;
+}
+.view_more a:hover{
+    transform: scale(1.1);
 }
 .view_more img{
     height: 1.2rem;
@@ -1016,7 +1033,7 @@ text-decoration: none;
 
 .card{
     margin-bottom: 25px;
-    height: 340px;
+    height: 333px;
     display: inline-block;
     border-radius: 16px;
     box-shadow: 0.1px 0.1px 3px rgba(0, 0,0,0.2);
@@ -1032,7 +1049,7 @@ text-decoration: none;
 }
 
 .faculty-heading{
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 color: #0C2695;
 leading-trim: both;
 text-edge: cap;
@@ -1115,14 +1132,12 @@ line-height: 1.5rem; /* 171.429% */
     padding-top: 1px;
 }
 .view_more{
-    color: #0C2695;
 font-feature-settings: 'clig' off, 'liga' off;
 font-size: 0.875rem;
 font-style: normal;
 font-weight: 600;
 line-height: 1.5rem; /* 171.429% */
-text-decoration-line: underline;
-margin-top: 0.3rem;
+margin-top: 1rem;
 
 }
 
@@ -1140,6 +1155,7 @@ margin-top: 0.3rem;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    margin-bottom: 30px;
 }
 .result_asge_card{
     width: 16rem;
@@ -1661,7 +1677,6 @@ line-height: 1.5rem; /* 160% */
 /* ------------------------------------------industrial----------------------------------------------------- */
 #industrial_visit{
     font-family: 'Plus Jakarta Sans';
-    margin-top: 7rem;
 }
 #industrial_visit h1{
     color: #0C2695;
@@ -1670,8 +1685,8 @@ line-height: 1.5rem; /* 160% */
 }
 #industrial_visit p{
     color: #6D6D6D;
-    margin-top: 18px;
-    margin-bottom:18px ;
+    margin-top: 30px;
+    
     font-size: 1.2rem;
     margin-bottom: 20px;
 }
@@ -1883,7 +1898,7 @@ line-height: normal;
 .exam_links{
     display: flex;
     flex-direction: column;
-    margin-top: 40px;
+    margin-top: 30px;
 }
 .exam_links_one{
     width: 54.3rem;
@@ -1959,7 +1974,7 @@ padding-left: 0.8rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-top: 18px;
+    margin-top: 30px;
     margin-bottom: 20px;
 }
 
@@ -3320,7 +3335,7 @@ padding: 10px;
 }
 
   
-
+a
 
   .Industry_list{
     font-weight: 500;
