--- a/collage.css
+++ b/collage.css
@@ -415,6 +415,9 @@ nav bar and first section complete
   width: 100%;
 
 }
+.Departments p{
+  text-align: center;
+}
 
 .card-container{
   display: flex;
@@ -515,20 +518,31 @@ nav bar and first section complete
   color: #fff;
   font-size: 16px;
   border-radius: 10px;
-  padding: 20px 10px;
+  padding: 15px 10px;
   display: flex;
   justify-content: space-evenly;
   justify-content: center;
   cursor: pointer;
   height: max-content;
+  width: fit-content;
   text-wrap: nowrap;
 }
-
+.about .content .bluebar
+{
+  width: auto;
+}
 .bluebarb{
   display: none;
 }
 
 .card-container .cards .bluebar:hover, .Departments .top .bluebar:hover, .about .content .bluebar:hover{
+  background-color: #dfdfdf;
+  color: #0C2695;
+  font-weight: 600;
+  transition: 0.10s;
+}
+
+.bluebarb:hover{
   background-color: #dfdfdf;
   color: #0C2695;
   font-weight: 600;
@@ -766,7 +780,7 @@ button {
   height: 60px;
   width: 60px;
   border-radius:100px;
- margin: 5px auto;
+  margin: 5px auto;
   background-color: white;
   align-items: center;
   display: flex;
