--- a/ABOUT.css
+++ b/ABOUT.css
@@ -19,7 +19,13 @@ body{
     justify-content: end;
     padding-right: 198px;
 
-
+#highlight {
+    color: #4C6BF1;
+    font-weight: 600;
+    border: 2px solid #4C6BF1;
+    padding: 0.2rem;
+    border-radius: 0.5rem;
+}
     
 }
 .header {
