--- a/Admission.css
+++ b/Admission.css
@@ -20,6 +20,13 @@ body{
 
     
 }
+#highlight {
+    color: #4C6BF1;
+    font-weight: 600;
+    border: 2px solid #4C6BF1;
+    padding: 0.2rem;
+    border-radius: 0.5rem;
+}
 .header {
     /* position:fixed; */
     z-index: 1;
