--- a/student.css
+++ b/student.css
@@ -20,6 +20,14 @@ body{
     transition: 0.80s;
   
   }
+
+ #highlight {
+    color: #4C6BF1;
+    font-weight: 600;
+    border: 2px solid #4C6BF1;
+    padding: 0.2rem;
+    border-radius: 0.5rem;
+}
   
   /* 2nd nav */
   .header {
