about us responsive

--- a/student.css
+++ b/student.css
@@ -63,15 +63,12 @@ body{
     .header, .topper {
       padding: 0px 5%;
     }
-    .content-transition {
-        padding: 0px 5%;
-    }
   }
   @media only screen and (max-width:850px) {
     .header, .topper {
       padding: 0px 2%;
     }
-    .content-transition{
+    .main, .about_us{
         padding: 0px 2%;
     }
   }
@@ -112,7 +109,6 @@ body{
     text-decoration: none;
     color: #FFF;
   }
-  
   .header .head{
     margin: 0;
     display: flex;
@@ -147,7 +143,6 @@ body{
       margin: 10px 15px;
       font-weight: 500;
   }
-  
   /* ------------------------ */
   
   .hamburger{
@@ -208,6 +203,7 @@ body{
     }
   }
   
+  
 .nvc1{
     display: flex;
     color: #000;
@@ -236,7 +232,8 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items:flex-start;
+    padding-left: 11.45%;
 }
 
 
@@ -532,11 +529,13 @@ body{
     flex-shrink: 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     position: relative;
-    padding-left: 82px;
+    padding: 0 11.45%;
+    gap: 5rem;
+    background-image: linear-gradient(90deg, #fff 69%,#fff 1%, #3654D2 30%);
 }
 .main_content{
-    width: 30vw;
     text-align: justify;
 }
 .ab{
@@ -569,6 +568,21 @@ body{
     line-height: 24px;
     margin-top: 16px;
 }
+.about_list{
+    margin-left: 20px;
+    margin-top: 16px;
+}
+.about_list li{
+    color: #6D6D6D;
+leading-trim: both;
+text-edge: cap;
+font-feature-settings: 'clig' off, 'liga' off;
+font-family: 'Plus Jakarta Sans';
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 150% */
+}
 
 .about_mission{
     color: #4C6BF1;
@@ -580,44 +594,33 @@ body{
     line-height: normal;
     margin-top: 40px;
 }
-.rectangle_blue{
-    width: 40%;
-    height: initial;
-    background-image: linear-gradient(124deg, #0C2695 0%, #4C6BF1 100%);
-    margin-left: 25%;
-}
-
 .about_image{
     border-radius: 16px;
     background: lightgray 50% / cover no-repeat, #FFF;
-    height: 300px;
     flex-shrink: 0;
-    position: absolute;
     z-index: 2;
-    top:30%;
-    right:10%;
+    padding: 50px 10px;
 } 
 .about_image img{
-    width: 540px;
-    height: 300px;
+    max-width: 40vw;
+    height: 50%;
 }
 
-@media only screen and (max-width : 1350px){
-    .main_content{
-        width:max(400px,60vw);
-    }
-    .rectangle_blue ,.about_image{
+@media only screen and (max-width : 1250px){
+    .about_image{
         display: none;
     }
     .about_us{
         justify-content: center;
-        margin: 0;
-        padding: 10px;
+        background: #fff;
+        height: fit-content;
+        flex-direction: column;
     }
     .about_content{
         font-size: 90%;
     }
 }
+
 /* ------------------------------------------------------------  */
 .content-transition{
     display: flex;
@@ -635,7 +638,7 @@ body{
 .dir{
     display: flex;
 }
-.director_content{
+.director_content, .laa ,.agb{
     margin-left: 1.88rem;
     width: calc(100vw - 15.5vw - 21.88rem);
 }
@@ -732,16 +735,7 @@ body{
     margin-top: 72px;
 }
 
-/* Life at ait */
-.laa{
-    /* width: 1440px; */
-    /* background-color: aqua; */
-    font-family:'Plus Jakarta Sans';
-    margin-left: 60px;
-    
-    /* border: 1px solid black; */
 
-}
 .middle_bar{
     display: flex;
     flex-direction: column;
@@ -875,23 +869,11 @@ body{
 .lim{
     background-image: url(Rectangle\ 69.png);
     margin-top: 1.5rem;
-    width: 540px;
-    height: 313px;
+    margin-bottom: 1.5rem;
+    height: 30vw;
     flex-shrink: 0;
     background-size: cover;
     border-radius: 20px;
-}
-.lic{
-    margin-top: 24px;
-    color: #000;
-    width: 825px;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Plus Jakarta Sans;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px; /* 171.429% */
-
 }
 #but{
     border-radius: 6px;
@@ -933,13 +915,6 @@ body{
     line-height: normal;
     margin-top: 72px;
 }
-.agb{
-    height: 1520px;
-    margin-left: 60px;
-    font-family: 'Plus Jakarta Sans';
-    /* display: none; */
-    /* width: 1440px; */
-}
 .agc{
     margin-top: 16px;
     color: #6D6D6D;
@@ -965,30 +940,16 @@ body{
 .govat{
     display: flex;
 }
-.ait_history{
-    margin-left: 60px;
-    font-family: 'Plus Jakarta Sans';
-    height: 1000px;
-}
-.ait_history h2{
-    color: #0C2695;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
 .history_con{
     color: #000;
-    width: 850px;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Plus Jakarta Sans;
-    font-size: 14px;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 500;
     line-height: 24px; /* 171.429% */
     margin-top: 1rem;
-
+    text-align: justify;
 }
 .overview h2{
     margin-top: 1.18rem;
@@ -1291,28 +1252,28 @@ text-decoration: none;
 }
 
 @media only screen and (max-width:1350px){
-    .director_content{
+    .director_content, .laa ,.agb{
         width: calc(100vw - 14.5vw - 21.88rem);
     }
 }
 
 @media only screen and (max-width:1200px){
-    .director_content{
+    .director_content, .laa ,.agb{
         width: calc(100vw - 13.5vw - 21.88rem);
     }
 }
 
 @media only screen and (max-width:1100px){
-    .director_content{
+    .director_content, .laa ,.agb{
         width: calc(100vw - 12.5vw - 21.88rem);
     }
 }
 
 @media only screen and (max-width:1000px){
-    .content-transition {
+    .content-transition , .about_us, .main{
         padding: 0px 5%;
     }
-    .director_content{
+    .director_content, .laa ,.agb{
         font-size: .9rem;
         width: calc(100vw - 21.00rem);
     }
@@ -1321,10 +1282,10 @@ text-decoration: none;
     }
   }
   @media only screen and (max-width:850px) {
-    .content-transition {
+    .content-transition ,.about_us, .main{
       padding: 0px 2%;
     }
-    .director_content{
+    .director_content, .laa ,.agb{
         font-size: .8rem;
         width: calc(100vw - 17.50rem);
     }
@@ -1416,7 +1377,7 @@ text-decoration: none;
       .jd_table ul > *:first-child{
         border-top: 0;
       }
-    .director_content{
+    .director_content, .laa ,.agb{
         margin-left: 0rem;
         font-size: .7rem;
         justify-content: center;
@@ -1462,5 +1423,8 @@ text-decoration: none;
     }
     #link_external{
         font-size: .7rem;
+    }
+    .lim{
+        height: 50vw;
     }
 }
