NAAC & PLACEMENT responsive done
complete placement responsive
complete naac responsive

--- a/IT.css
+++ b/IT.css
@@ -3334,8 +3334,6 @@ padding: 10px;
    
 }
 
-  
-a
 
   .Industry_list{
     font-weight: 500;
@@ -3661,6 +3659,151 @@ padding: 1.5rem;
     border-radius:0.5rem;
 }
 
-
-
+#highlight_items{
+    border: 1px solid #FFF;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+}
 /* ///////////////////////////////////////////////////////////////////////////////////// */
+
+
+
+/*-------------------------------------------------------------- Placements--------------------------------------- */
+/* ----------------------------------PLACEMENT PAGES-------------------------------------- */
+
+
+.placement_content{
+    font-family: 'Plus Jakarta Sans';
+    text-align: justify;
+}
+
+
+
+.placement_content_heading{
+    color: #0C2695;
+leading-trim: both;
+text-edge: cap;
+font-feature-settings: 'clig' off, 'liga' off;
+
+font-size: 2rem;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+margin-bottom: 30px;
+}
+.placement_objectives_heading{
+    color: #4C6BF1;
+leading-trim: both;
+text-edge: cap;
+font-feature-settings: 'clig' off, 'liga' off;
+font-size: 1.5rem;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.placement_objectives_content{
+    margin-left: 1.2rem;
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: 500;
+}
+.placement_reprsentative{
+    margin-top: 1.4rem;
+}
+.representative_branch{
+    font-size: 1.25rem;
+    color: black;
+    font-weight: 700;
+    margin-top: 1rem;
+}
+/*--------------------------------------- Domains of T & P Cell------------------------------------- */
+.placement_domain_content{
+    margin-left: 1.2rem;
+    font-size: 1rem;
+    font-weight: 500;
+}
+/*--------------------------------------- Brochure-------------------------------------------- */
+.brochure_contain{
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+    width: 54.4rem;
+    height: 10rem;
+    display: flex;
+    margin-bottom: 1.25rem
+}
+.brochure_contain img{
+    height: 10rem;
+    width: 8rem;
+    padding: 1rem;
+}
+.brochure_contain a{
+    margin-top: 4rem;
+    text-decoration: none;
+    color: #000000;
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.contact_con3{
+    width: 54rem;
+    height: 11.55rem;
+flex-shrink: 0;
+border-radius: 10px;
+/* border: solid 0.1px rgba(0, 0, 0, 0.1); */
+box-shadow: 1px 1px 3px rgba(0, 0,0,0.2);
+/* padding-left: 1.31rem; */
+padding: 1.5rem;
+}
+
+
+.tpo_name{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 1.25rem;
+}
+
+.contact1 img{
+    width: 1.125rem;
+height: 1.125rem;
+flex-shrink: 0;
+}
+.contact1{
+    display: flex;
+    gap: 1rem;
+}
+.contact1 p{
+    color: #000;
+leading-trim: both;
+text-edge: cap;
+font-feature-settings: 'clig' off, 'liga' off;
+font-family: Plus Jakarta Sans;
+font-size: 1rem;
+font-style: normal;
+font-weight: 500;
+line-height: 1.25rem; /* 125% */
+}
+
+@media screen and (max-width:700px){
+
+    .brochure_contain{
+        width: 100%;
+    }
+    .placement_content_heading{
+        text-align: center;
+        font-size: 1.5rem;
+    }
+    .placement_objectives_heading{
+        font-size: 1.2rem;
+    }
+    .representative_branch{
+        font-size: 1rem;
+    }
+    .placement_content ul li{
+        font-size: 0.8rem;
+    }
+    .tpo_name {
+        font-size: 1.2rem;
+    }
+    .project_more p{
+        font-size: 1.2rem;
+    }
+}
